add console input / output; add option to ignore missing transform file

--- a/source/ConfigTransformationTool/ConfigTransformationTool.csproj
+++ b/source/ConfigTransformationTool/ConfigTransformationTool.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArgumentsLoader.cs" />
+    <Compile Include="ConsoleEncodingContext.cs" />
     <Compile Include="OutputLog.cs" />
     <Compile Include="ParametersLoader.cs" />
     <Compile Include="ParametersParser.cs" />
