--- a/source/ConfigTransformationTool/ConfigTransformationTool.csproj
+++ b/source/ConfigTransformationTool/ConfigTransformationTool.csproj
@@ -22,9 +22,9 @@
     </SccAuxPath>
     <SccProvider>
     </SccProvider>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">../</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <PublishUrl>publish\</PublishUrl>
+    <PublishUrl>publish/</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -45,7 +45,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin/Debug/</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -54,14 +54,14 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin/Release/</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Web.XmlTransform">
-      <HintPath>..\packages\Microsoft.Web.Xdt.1.0.0-alpha\lib\net40\Microsoft.Web.XmlTransform.dll</HintPath>
+      <HintPath>../packages/Microsoft.Web.Xdt.1.0.0-alpha/lib/net40/Microsoft.Web.XmlTransform.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -80,7 +80,7 @@
     <Compile Include="ParametersParser.cs" />
     <Compile Include="ParametersTask.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties/AssemblyInfo.cs" />
     <Compile Include="TransformationLogger.cs" />
     <Compile Include="TransformationTask.cs" />
   </ItemGroup>
@@ -113,12 +113,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-  <UsingTask TaskName="ILMerge.MSBuild.Tasks.ILMerge" AssemblyFile="..\packages\ILMerge.MSBuild.Tasks.1.0.0.3\tools\ILMerge.MSBuild.Tasks.dll" />
+  <Import Project="$(MSBuildToolsPath)/Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)/.nuget/nuget.targets" />
+  <UsingTask TaskName="ILMerge.MSBuild.Tasks.ILMerge" AssemblyFile="../packages/ILMerge.MSBuild.Tasks.1.0.0.3/tools/ILMerge.MSBuild.Tasks.dll" />
   <ItemGroup>
-    <MergeAsm Include="$(TargetDir)\ctt.console.exe" />
-    <MergeAsm Include="$(TargetDir)\Microsoft.Web.XmlTransform.dll" />
+    <MergeAsm Include="$(TargetDir)/ctt.console.exe" />
+    <MergeAsm Include="$(TargetDir)/Microsoft.Web.XmlTransform.dll" />
   </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>
@@ -132,6 +132,6 @@
   </Target>
   -->
   <Target Name="AfterBuild">
-    <ILMerge InputAssemblies="@(MergeAsm)" OutputFile="$(TargetDir)\ctt.exe" TargetKind="Exe" />
+    <ILMerge InputAssemblies="@(MergeAsm)" OutputFile="$(TargetDir)/ctt.exe" TargetKind="Exe" />
   </Target>
 </Project>
