--- a/source/ConfigTransformationTool/ConfigTransformationTool.csproj
+++ b/source/ConfigTransformationTool/ConfigTransformationTool.csproj
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OutcoldSolutions.ConfigTransformationTool</RootNamespace>
-    <AssemblyName>ctt.console</AssemblyName>
+    <AssemblyName>ctt</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Web.XmlTransform">
       <HintPath>../packages/Microsoft.Web.Xdt.1.0.0-alpha/lib/net40/Microsoft.Web.XmlTransform.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -113,12 +114,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)/Microsoft.CSharp.targets" />
-  <UsingTask TaskName="ILMerge.MSBuild.Tasks.ILMerge" AssemblyFile="../packages/ILMerge.MSBuild.Tasks.1.0.0.3/tools/ILMerge.MSBuild.Tasks.dll" />
   <ItemGroup>
-    <MergeAsm Include="$(TargetDir)/ctt.console.exe" />
-    <MergeAsm Include="$(TargetDir)/Microsoft.Web.XmlTransform.dll" />
+    <EmbeddedResource Include="..\packages\Microsoft.Web.Xdt.1.0.0-alpha\lib\net40\Microsoft.Web.XmlTransform.dll">
+      <Link>Microsoft.Web.XmlTransform.dll</Link>
+    </EmbeddedResource>
   </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)/Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
@@ -130,7 +131,4 @@
   
   </Target>
   -->
-  <Target Name="AfterBuild">
-    <ILMerge InputAssemblies="@(MergeAsm)" OutputFile="$(TargetDir)/ctt.exe" TargetKind="Exe" />
-  </Target>
 </Project>
