--- a/source/ConfigTransformationTool.Tests/ConfigTransformationTool.Tests.csproj
+++ b/source/ConfigTransformationTool.Tests/ConfigTransformationTool.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ParametersTaskSpec.cs" />
     <Compile Include="PerformanceTester.cs" />
     <Compile Include="Properties/AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="TransformationTaskSpec.cs" />
   </ItemGroup>
   <ItemGroup>
