--- a/source/ConfigTransformationTool/ConfigTransformationTool.csproj
+++ b/source/ConfigTransformationTool/ConfigTransformationTool.csproj
@@ -80,7 +80,7 @@
     <Compile Include="ParametersParser.cs" />
     <Compile Include="ParametersTask.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties/AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransformationLogger.cs" />
     <Compile Include="TransformationTask.cs" />
   </ItemGroup>
